fixing menu on iPhone/iPad

--- a/content/css/core.css
+++ b/content/css/core.css
@@ -404,6 +404,10 @@ body{
     margin: 0;
 }
 
+.menu-area-fixed {
+ border: 1px;
+}
+
 .menu-absolute {
     position: absolute;
 }
